--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body style="background-color: #1a1a40;">
     <div class="left-column">
-        <!-- black -->
+        <!-- Black & white -->
         <h1>Technitude</h1>
         <h1>Blackout</h1>
         <h3>If it goes black, will you stay on track?</h3>
@@ -26,7 +26,7 @@
             tomorrow. Then comes to presentation of the event,
             even when dark. Make your scripts ready.
             Oh no!!! don't forget to merge the objects.</P>
-        <!-- dark -->
+        <!-- Do you like Vs code DARK mode ? -->
         <div class="btn">
             <button>Learn More</button>
             <button>Watch Video</button>
@@ -37,7 +37,7 @@
             <div class="fa fa-linkedin"></div>
             <div class="fa fa-instagram"></div>
         </div>
-        <!-- shadow -->
+        <!-- Shadow always follows you till the end -->
     </div>
     <img src="assets/feature.png" class="right-column" alt="image">
     <script src="./script.js"></script>
