--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             tomorrow. Then comes to presentation of the event,
             even when dark. Make your scripts ready.
             Oh no!!! don't forget to merge the objects.</P>
-        <!-- Do you like Vs code DARK mode ? -->
+        <!-- Do you like Vs code <DARK> mode ? -->
         <div class="btn">
             <button>Learn More</button>
             <button>Watch Video</button>
